[gd_scene load_steps=2 format=3 uid="uid://c0nt2ei1ryy4f"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_nc0aw"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_nc0aw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "RESUME"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "OPTIONS"

[node name="exit to title" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "EXIT TO TITLE"

[connection signal="button_down" from="VBoxContainer/resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="VBoxContainer/options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="VBoxContainer/exit to title" to="." method="_on_exit_to_title_button_down"]
